Primera iteración: piano

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
   
   <!-- Next Steps -->
-  <h2>Hello word!</h2>
+  <h2>Hello!</h2>
   <p>And welcome to {{title}} </p>
 
   <li><button (click)="startTheNoteC4(sound)" [ngClass]="'whiteBtn'">c4</button></li>
