Arreglo de css, primera canción funcional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,8 @@
 
   
   <!-- Next Steps -->
-  <h2>Hello!</h2>
-  <p>And welcome to {{title}} </p>
+  <h2>Hello! :)</h2>
+  <p>Choose a song: </p>
 
-  <li><button (click)="startTheNoteC4(sound)" [ngClass]="'whiteBtn'">c4</button></li>
-  <li><button (click)="startTheNoteCD4(sound)" [ngClass]="'blackBtn'">cd4</button></li>
-  <li><button (click)="startTheNoteD4(sound)" [ngClass]="['whiteBtn', 'middleBtn']">d4</button></li>
-  <li><button (click)="startTheNoteDE4(sound)" [ngClass]="'blackBtn'">de4</button></li>
-  <li><button (click)="startTheNoteE4(sound)" [ngClass]="['whiteBtn', 'middleBtn']">e4</button></li>
-  <li><button (click)="startTheNoteF4(sound)" [ngClass]="'whiteBtn'">f4</button></li>
-  <li><button (click)="startTheNoteFG4(sound)" [ngClass]="'blackBtn'">fg4</button></li>
-  <li><button (click)="startTheNoteG4(sound)" [ngClass]="['whiteBtn', 'middleBtn']">g4</button></li>
-  <li><button (click)="startTheNoteGA4(sound)" [ngClass]="'blackBtn'">ga4</button></li>
-  <li><button (click)="startTheNoteA4(sound)" [ngClass]="['whiteBtn', 'middleBtn']">a4</button></li>
-  <li><button (click)="startTheNoteAB4(sound)" [ngClass]="'blackBtn'">ab4</button></li>
-  <li><button (click)="startTheNoteB4(sound)" [ngClass]="['whiteBtn', 'middleBtn']">b4</button></li>
-  <li><button (click)="startTheNoteC5(sound)" [ngClass]="'whiteBtn'">c5</button></li>
-  <li><button (click)="startTheNoteCD5(sound)" [ngClass]="'blackBtn'">cd5</button></li>
-  <li><button (click)="startTheNoteD5(sound)" [ngClass]="['whiteBtn', 'middleBtn']">d5</button></li>
-  <li><button (click)="startTheNoteDE5(sound)" [ngClass]="'blackBtn'">de5</button></li>
-  <li><button (click)="startTheNoteE5(sound)" [ngClass]="['whiteBtn', 'middleBtn']">e5</button></li>
-  <li><button (click)="startTheNoteF5(sound)" [ngClass]="'whiteBtn'">f5</button></li>
-  <li><button (click)="startTheNoteFG5(sound)" [ngClass]="'blackBtn'">fg5</button></li>
-  <li><button (click)="startTheNoteG5(sound)" [ngClass]="['whiteBtn', 'middleBtn']">g5</button></li>
-  <li><button (click)="startTheNoteGA5(sound)" [ngClass]="'blackBtn'">ga5</button></li>
-  <li><button (click)="startTheNoteA5(sound)" [ngClass]="['whiteBtn', 'middleBtn']">a5</button></li>
-  <li><button (click)="startTheNoteAB5(sound)" [ngClass]="'blackBtn'">ab5</button></li>
-  <li><button (click)="startTheNoteB5(sound)" [ngClass]="['whiteBtn', 'middleBtn']">b5</button></li>
-
+  <app-piano></app-piano>
 <router-outlet></router-outlet>
