Se agregan canciones y boton de grabado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-
-  
-  <!-- Next Steps -->
+<body>
   <h2>Hello! :)</h2>
   <p>Choose a song: </p>
 
   <app-piano></app-piano>
 <router-outlet></router-outlet>
+</body>
