Inicio de login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,12 @@
 <body id="myId"> 
     <section class="register-account"> 
           <div class="signform">      
-            <div class="left"><a href="#" style="float:right;margin-right:35px;font-size: 0.9em;" class="bts-a">Don't have an account? Sign up!</a>
+            <div class="left">
+              <a  href="/register" style="float:right;margin-right:35px;font-size: 0.9em;" class="bts-a">Don't have an account? Sign up!</a>
               <div class="bts">
-                <a href="#" class="fblogin social"><i class="fa fa-facebook"></i><span>Sign in with Facebook</span></a>
-                 <a href="#" class="twlogin social"><i class="fa fa-twitter"></i><span>Sign in with Twitter</span></a>
-                <a href="#" class="gplogin social" (click)="googleLogIn()"><i class="fa fa-google-plus"></i><span>Sign in with Google</span></a>             
+                <a href="#" class="fblogin social"><span>Sign in with Facebook</span></a>
+                <a href="#" class="twlogin social"><span>Sign in with Twitter</span></a>
+                <a href="#" class="gplogin social" (click)="googleLogIn()"><span>Sign in with Google</span></a>             
               </div>
             </div>
             <div class="right">
@@ -13,9 +14,9 @@
                   <h4>Login To Your Account</h4>
                 </div>
                 <div class="form">
-                  <form (submit)="AddUser()" class="login-form" id="login-form">
-                      <input type="text" placeholder="User Name"/>
-                      <input type="password" placeholder="Password"/>        
+                  <form (submit)="addUser()" class="login-form" id="login-form">
+                      <input type="text" id="email" placeholder="Email"/>
+                      <input type="password" id="password" placeholder="Password"/>        
                       <input class="subbt" type="submit" value="Sign In" style="border:none;"/>   
                   </form>
                   <input type="checkbox" id="remember" name="remember"><span style="color:#b6b6b6;font-size: 0.9em;"> Remember Me</span><a href="#">Forgot your password?</a>        
