--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,10 +14,10 @@
                   <h4>Login To Your Account</h4>
                 </div>
                 <div class="form">
-                  <form (submit)="addUser()" class="login-form" id="login-form">
+                  <form (submit)="loginEmail()" class="login-form" id="login-form">
                       <input type="text" id="email" placeholder="Email"/>
                       <input type="password" id="password" placeholder="Password"/>        
-                      <input class="subbt" type="submit" value="Sign In" style="border:none;"/>   
+                      <button><a href="/home"  type="submit" class="subbt">Sign in</a></button> 
                   </form>
                   <input type="checkbox" id="remember" name="remember"><span style="color:#b6b6b6;font-size: 0.9em;"> Remember Me</span><a href="#">Forgot your password?</a>        
                 </div>
