--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,10 @@
-<div class="form">
-        <form (submit)="createUser()" class="login-form" id="login-form">
-            <input type="text" [(ngModel)]="person.emailname" name="email" placeholder="Email"/>
-            <input type="password"  [(ngModel)]="person.passwordName" name="password" placeholder="Password"/>        
-            <input class="subbt" type="submit" value="Register" style="border:none;"/>   
-        </form>
-</div>
+  <div class="login-page">
+    <div class="form">
+      <form (submit)="createUser()" class="login-form">
+        <input type="text" [(ngModel)]="email" placeholder="Email address"/>
+        <input type="password" [(ngModel)]="password" placeholder="Password"/>
+        <button><a href="/home"  type="submit" class="subbt">Register</a></button>
+        <p class="message">Already registered? <a href="#">Sign In</a></p>
+      </form>
+    </div>
+  </div>
