Cambio diseño de Login. Logout funcional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html>
 <body>
   <h2>Hello! :)</h2>
   <p>Choose a song: </p>
  
 <router-outlet></router-outlet>
 </body>
+</html>
