--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,357 +1,119 @@
-.register-account{
-    background: url(http://cdn.paper4pc.com/images/grunge-texture-wallpaper-5.jpg) no-repeat center top;
-    background-color: transparent;
-    background-image: url(http://cdn.paper4pc.com/images/grunge-texture-wallpaper-5.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center top;
-    background-clip: border-box;
-    background-origin: padding-box;
-    background-size: auto auto;
-    background-size: cover;
-    padding: 200px 0 150px;
-    padding-top: 200px;
-    padding-right: 0px;
-    padding-bottom: 150px;
-    padding-left: 0px;
-    width: auto;
 
-}
-
-/*Login Form CSS*/
-.login-form input{
-width: 100%;
-border: 1px solid #dddddd;
-padding: 0.7em;
-margin: 0.6em 0;
-border-radius: 0;
-margin-bottom: 15px;
-}
-.login-form{
-margin-bottom: 30px;
-} 
-.signform {
-background-color: #FFF;
-padding-bottom: 40px;
-padding-top: 35px;
-margin: 0 auto;
-margin-top: auto;
-}
-.bts {
-padding: 2em;
-margin: 0.6em 0;
-margin-top: 
-}
-.bts-a:hover{
-color: #79b42b;
-text-decoration: none;
-background: white;   
-}
-.bts span {
-text-align: center; 
-font-size: .9em;
-font-family: 'Arimo', sans-serif;
-font-weight: 700;
-font-style: normal;
-}
-.social{
-transition: background 200ms ease-in-out 0s;
--webkit-transition: background 200ms ease-in-out 0s;
--moz-transition: background 200ms ease-in-out 0s;
--o-transition: background 200ms ease-in-out 0s;
--ms-transition: background 200ms ease-in-out 0s;
-
-margin-top: 12px;
--webkit-border-top-left-radius:1px;
--moz-border-radius-topleft:1px;
-border-top-left-radius:1px;
--webkit-border-top-right-radius:1px;
--moz-border-radius-topright:1px;
-border-top-right-radius:1px;
--webkit-border-bottom-right-radius:1px;
--moz-border-radius-bottomright:1px;
-border-bottom-right-radius:1px;
--webkit-border-bottom-left-radius:1px;
--moz-border-radius-bottomleft:1px;
-border-bottom-left-radius:1px;
-text-indent:0;
-display:block;
-color:#ffffff;
-height:50px;
-line-height:50px;
-width: 100%;
-text-decoration:none;
-text-align:center;
-}
-
-.fblogin {   
-background-color:#3b5898;  
-}
-.fblogin:hover {
-background-color:#5177c2;
-}
-.fblogin:active {
-position:relative;
-top:1px;
-}
-.gplogin {  
-background-color:#dd4c39; 
-}
-.gplogin:hover {
-background-color:#f06e60;
-}
-.gplogin:active {
-position:relative;
-top:1px;
-}
-.twlogin { 
-background-color:#00abee;  
-}
-.twlogin:hover {
-background-color:#4cbde6;
-}
-.twlogin:active {
-position:relative;
-top:1px;
-}
-.login-form input:focus, .login-form input:active {
-border-bottom: 2px solid #79B42B;
-outline: none;
-}
-.subbt:hover {
-background-color: #79b42b;
-}
-.subbt {
-
-text-shadow: 0 1px 0 rgba(122, 122, 122, 0.85);
-transition: background 500ms ease-in-out 0s;
--webkit-transition: background 500ms ease-in-out 0s;
--moz-transition: background 500ms ease-in-out 0s;
--o-transition: background 500ms ease-in-out 0s;
--ms-transition: background 500ms ease-in-out 0s;
-background-color: #79b42b;
-border: none;
-color: #FFF;
-padding: 10px 15px 10px 15px;
-margin-top: 10px;
-cursor: pointer;
-font-size: .9em;
-border-radius: 3px;
-width: 218px;
-font-family: 'Arimo', sans-serif;
-font-weight: 700;
-font-style: normal;
-
-}
-.right a {
-position: relative;
-color: #b6b6b6;
-text-decoration: none;
-font-family: 'Arimo', sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size: .9em;
-float: right;
-margin-top:5px;
-}
-.headit { 
-position: relative; 
-top: -10px;
-}
-.headit h4{
-color: #474646;
-}
-.bts a:hover{
-text-decoration: none;
-color: white;
-}
-.bts a:active{
-color: white;
-text-decoration: none;
-}
-.bts a:focus{
-text-decoration: none;
-color: white;
-}
-.headit a {
-text-decoration: none;
-}
-
-.fa.fa-check-square {
-padding-right: 19px;
-}
-form#login-form:before {
-content: 'or';
-color: #79b42b;
-position: absolute;
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
-margin: auto;
-height: 0.5em;
-width: 0.5em;
-left: 1.5em;
-
-z-index: 900;
-}
-form#login-form:after {
-content: '';
-position: absolute;
-background: rgba(128, 128, 128, 0.3);
-top: 0;
-right: 0;
-left: 0;
-bottom: 15px;
-margin: auto;  
-height: 3.25em;
-width: 0.1em;
-left: 2.15em;
-
--moz-box-shadow: 0 8.8em 0 0 rgba(128, 128, 128, 0.3);
--webkit-box-shadow: 0 8.8em 0 0 rgba(128, 128, 128, 0.3);
-box-shadow: 0 8.8em 0 0 rgba(128, 128, 128, 0.3);
-}
-/*Media Query */
-@media screen  and (min-width: 1400px) {
-.signform { width: 680px; left: 25%; }
-}
-
-
-@media screen  and (max-width: 1400px) and (min-width: 1230px) {
-.signform { width: 50%; left: 25%; }
-}
-
-@media screen  and (max-width: 1230px) and (min-width: 1000px) {
-.signform { width: 60%; left: 15%; }
-}
-
-@media screen  and (max-width: 1000px) and (min-width: 900px) {
-.signform { width: 70%; left: 10%; }
-}
-
-@media screen  and (max-width: 900px) and (min-width: 750px) {
-.signform { width: 80%; left: 8%; }
-}
-
-@media screen  and (max-width: 750px) and (min-width: 640px) {
-.signform { width: 90%; 
-left: 1%; 
-}
-}
-
-@media screen  and (min-width: 640px) {
-.left {   
-width: 47%;
-display: inline-table;
-margin-left: 20px;
-float: right;
-}
-.right {
-width: 40%;
-display: inline-table;
-margin-left: 50px; 
-}
-}
-
-@media screen  and (max-width: 640px) {
-.left { 
-width: 100%;
-display: inline-table;  
-margin-bottom: 25px;
-}
-.right {
-width: 85%;
-display: inline-table;
-margin-left: 20px;  
-}
-.signform { 
-width: 50%;
-min-width:255px;
-}
-form#login-form:before {
-content: ''; 
-position: absolute;
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
-margin: auto;
-
-}
-form#login-form:after {
-content: '';
-position: absolute;   
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
-margin: auto;
-height:0em;
-width: 0em;
-left: 0em;
-top: 0em;
-
-}
-}
-@media screen  and (max-width: 1500px) and (min-width: 650px) {
-form#login-form::before {
-content: 'or';
-color: #79b42b;
-position: absolute;   
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
-margin: auto;
-height: 0.5em;
-width: 0.5em;
-left: 1.5em;
-top: 4.2em;
-z-index: 900;
-}
-form#login-form::after {
-content: '';
-position: absolute;
-background: rgba(128, 128, 128, 0.3);
-top: 0;
-right: 0;
-left: 0;
-bottom: 15px;
-margin: auto;
-height: 3.25em;
-width: 0.1em;
-left: 2.15em;
-top: -2.8em;
--moz-box-shadow: 0 8.8em 0 0 rgba(128, 128, 128, 0.3);
--webkit-box-shadow: 0 8.8em 0 0 rgba(128, 128, 128, 0.3);
-box-shadow: 0 8.8em 0 0 rgba(128, 128, 128, 0.3);
-}
-}
-@media screen  and (max-width: 640px) and (min-width: 460px) {
-.signform { 
-left: 25%;
-}
-}
-@media screen  and (max-width: 460px) and (min-width: 400px) {
-.signform {
-left: 20%; 
-}
-}
-@media screen  and (max-width: 400px) and (min-width: 320px) {
-.signform {
-left: 10%; 
-}
-}
-@media screen  and (max-width: 320px) {
-.signform {
-left: 1%;
-}
-}
-.bts i{ 
-margin: 15px 15px 15px 20px;
-float: left;
-width: 5%;
-font-size: 20px;
-margin-left: 20px;
-}
+  .login-box{
+    position:relative;
+    margin: 10px auto;
+    width: 500px;
+    height: 380px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
+  -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
+  box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
+  }
+  .lb-header{
+    position:relative;
+    color: #00415d;
+    margin: 5px 5px 10px 5px;
+    padding-bottom:10px;
+    border-bottom: 1px solid #eee;
+    text-align:center;
+    height:28px;
+  }
+  .lb-header a{
+    margin: 0 25px;
+    padding: 0 20px;
+    text-decoration: none;
+    color: #666;
+    font-weight: bold;
+    font-size: 15px;
+    -webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    transition: all 0.1s linear;
+  }
+  .lb-header .active{
+    color: #029f5b;
+    font-size: 18px;
+  }
+  .social-login{
+    position:relative;
+    float: left;
+    width: 100%;
+    height:auto;
+    padding: 10px 0 15px 0;
+    border-bottom: 1px solid #eee;
+  }
+  .social-login a{
+    position:relative;
+    float: left;
+    width:calc(40% - 8px);
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid rgba(0,0,0,0.05);
+    padding: 12px;
+    border-radius: 2px;
+    font-size: 12px;
+    text-transform: uppercase;
+    margin: 0 3%;
+    text-align:center;
+  }
+  .social-login a i{
+    position: relative;
+    float: left;
+    width: 20px;
+    top: 2px;
+  }
+  .social-login a:first-child{
+    background-color: #49639F;
+  }
+  .social-login a:last-child{
+    background-color: #DF4A32;
+  }
+  .email-login,.email-signup{
+    position:relative;
+    float: left;
+    width: 100%;
+    height:auto;
+    margin-top: 20px;
+    text-align:center;
+  }
+  .u-form-group{
+    width:100%;
+    margin-bottom: 10px;
+  }
+  .u-form-group input[type="email"],
+  .u-form-group input[type="password"]{
+    width: calc(50% - 22px);
+    height:45px;
+    outline: none;
+    border: 1px solid #ddd;
+    padding: 0 10px;
+    border-radius: 2px;
+    color: #333;
+    font-size:0.8rem;
+    -webkit-transition:all 0.1s linear;
+    -moz-transition:all 0.1s linear;
+    transition:all 0.1s linear;
+  }
+  .u-form-group input:focus{
+    border-color: #358efb;
+  }
+  .u-form-group button{
+    width:50%;
+    background-color: #1CB94E;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    font-weight: normal;
+    padding: 14px 0;
+    border-radius: 2px;
+    text-transform: uppercase;
+  }
+  .forgot-password{
+    width:50%;
+    text-align: left;
+    text-decoration: underline;
+    color: #888;
+    font-size: 0.75rem;
+  }
