--- a/src/app/piano/piano.component.html
+++ b/src/app/piano/piano.component.html
@@ -1,5 +1,5 @@
    
-   
+    <input type = 'button' *ngIf="isLogin" (click)="logOut()" [ngClass]="'buttonSong1'" value='Log Out'/>
     <input type = 'button' (click)="startSong('LaCucaracha')" [ngClass]="'buttonSong1'" value='La Cucaracha'/>
     <input type = 'button' (click)="startSong('ItsyBitsySpider')" [ngClass]="'buttonSong2'" value='Itsy Bitsy Spider'/>
     <input type = 'button' (click)="startSong('RowYourBoat')" [ngClass]="'buttonSong3'" value='Row Your Boat'/>
