--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <h2>Hello! :)</h2>
-  <p>Choose a song: </p>
- 
+<div>
+<flash-messages></flash-messages>
 <router-outlet></router-outlet>
-</body>
-</html>
+</div>
