--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,8 @@
         <a href="/register" id="signup-box-link">Sign Up</a>
       </div>
       <div class="social-login">
-        <a href="#">
-          <i class="fa fa-facebook fa-lg"></i>
-          Login in with facebook
-        </a>
-        <a href="#" (click)="googleLogIn()">
-          <i class="fa fa-google-plus fa-lg"></i>
-          log in with Google
-        </a>
+        <a class="btn btn-block btn-social btn-facebook"><fa-icon [icon]="faFacebook"></fa-icon>Login in with Facebook</a>
+        <a class="btn btn-block btn-social btn-google" (click)="googleLogIn()"><fa-icon [icon]="faGoogle"></fa-icon>Log in with Google</a>
       </div>
       <form (submit)="loginEmail()" class="email-login">
         <div class="u-form-group">
