--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,8 @@
         <a href="/register" id="signup-box-link">Sign Up</a>
       </div>
       <div class="social-login">
-        <a class="btn btn-block btn-social btn-facebook"><fa-icon [icon]="faFacebook"></fa-icon>Login in with Facebook</a>
-        <a class="btn btn-block btn-social btn-google" (click)="googleLogIn()"><fa-icon [icon]="faGoogle"></fa-icon>Log in with Google</a>
+        <a ><i class="fa fa-facebook fa-lg"></i>Login in with Facebook</a>
+        <a (click)="googleLogIn()"><i class="fa fa-google fa-lg"></i>Log in with Google</a>
       </div>
       <form (submit)="loginEmail()" class="email-login">
         <div class="u-form-group">
