forgot password funcional

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
           <button >Log in</button>
         </div>
         <div class="u-form-group">
-          <a href="#" class="forgot-password">Forgot password?</a>
+          <a href="/reset-password" class="forgot-password">Forgot password?</a>
         </div>
       </form>
     
