--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,15 +1,16 @@
 <div class="login-box">
     <div class="lb-header">
-      <a id="signup-box-link">Reset your password</a>
+      <a id="signup-box-link">Problems logging in?</a>
     </div>
     
     <form (submit)="sendEmail()" class="email-login">
-        <p>Write your email to send you a message.</p>
+        <p>Write your email address and we will send you a message to access again in Piammy.</p>
       <div class="u-form-group">
         <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Email"/>
       </div>
       <div class="u-form-group">
-        <button >Reset</button>
+        <button>Reset</button>
+        <button (click)="backToLogin()">Back</button>
       </div>
     </form>
   
