--- a/src/app/piano/piano.component.html
+++ b/src/app/piano/piano.component.html
@@ -1,10 +1,11 @@
    
-    <input type = 'button' *ngIf="isLogin" (click)="logOut()" [ngClass]="'buttonSong1'" value='Log Out'/>
+    <input type = 'button' *ngIf="isLogin" (click)="logOut()" [ngClass]="'logOutBtn'" value='Log Out'/>
     <input type = 'button' (click)="startSong('LaCucaracha')" [ngClass]="'buttonSong1'" value='La Cucaracha'/>
-    <input type = 'button' (click)="startSong('ItsyBitsySpider')" [ngClass]="'buttonSong2'" value='Itsy Bitsy Spider'/>
-    <input type = 'button' (click)="startSong('RowYourBoat')" [ngClass]="'buttonSong3'" value='Row Your Boat'/>
-    <input type = 'button' (click)="startSong('Rugrats')" [ngClass]="'buttonSong4'" value='Rugrats'/>
-    <input type = 'button' (click)="startSong('test')" [ngClass]="{buttonSong4: true, invisible: !stopRecording}" id='changeName' value='Test'/>
+    <input type = 'button' (click)="startSong('ItsyBitsySpider')" [ngClass]="'buttonSong1'" value='Itsy Bitsy Spider'/>
+    <input type = 'button' (click)="startSong('RowYourBoat')" [ngClass]="'buttonSong1'" value='Row Your Boat'/>
+    <input type = 'button' (click)="startSong('Rugrats')" [ngClass]="'buttonSong1'" value='Rugrats'/>
+    <input type = 'button' *ngFor="let song of songs | async" (click)="setCurrentSong(song.notes)" [ngClass]="'buttonSong1'" value='{{song.name}}'/>
+    
     <button (click)="recordSong()" [ngClass]="{invisible: isRecording, recBtn: true}"> Record </button>
     <button (click)="stopRecSong()" [ngClass]="{invisible: !isRecording, recBtn: true}"> Stop the Record </button>
     <div (window:keyup)="onKeydown($event)"></div>
