--- a/src/app/reset-password/reset-password.component.css
+++ b/src/app/reset-password/reset-password.component.css
@@ -1,10 +1,11 @@
 .login-box{
-    font-family: sans-serif;
+    font-family: 'Dekko', cursive;
     position:relative;
     margin: 10px auto;
+    margin-top: 50px;
     width: 500px;
     height: 380px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.6);
     padding: 10px;
     border-radius: 3px;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
@@ -81,8 +82,7 @@
     width:100%;
     margin-bottom: 10px;
   }
-  .u-form-group input[type="email"],
-  .u-form-group input[type="password"]{
+  .u-form-group input[type="email"]{
     width: calc(50% - 22px);
     height:45px;
     outline: none;
@@ -99,8 +99,9 @@
     border-color: #358efb;
   }
   .u-form-group button{
+    margin: 5px;
     width:50%;
-    background-color: #1CB94E;
+    background-color: rgb(28, 185, 133);
     border: none;
     outline: none;
     color: #fff;
