--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
 .invisible{
     display: none;
 }
+body{
+    background-image: url(https://printawallpaper.com/upload/designs/Kids_School_dn.jpg);
+}
