--- a/src/app/piano/piano.component.css
+++ b/src/app/piano/piano.component.css
@@ -101,3 +101,30 @@ color:#FFFFFF;
     .logOutBtn:hover{
         border:5px solid #3b3a3a;
     }
+
+@media only screen and (max-width: 767px) {
+    ul{
+        height:100%;
+        width:85%;
+    }
+    .whiteBtn{
+        width: 270px;
+        height: 40px;
+    }
+    .blackBtn{
+        width: 170px;
+        height: 40px;
+        margin: -3.5em 0 0 0;
+    }
+    li{
+        float: none;
+    }
+    .middleBtn {
+        margin:-3.5em 0 0 0;
+    }
+    
+    .HomeBtns{
+        display: none;
+        background: #000;
+    }
+}
