--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
     <div class="login-box">
+      <section class="demoBox"> Try with Email: to.demo.example@gmail.com<br> Password: ToDemoExample123</section>
       <div class="lb-header">
         <a href="#" class="active" id="login-box-link">Login</a>
         <a href="/register" id="signup-box-link">Sign Up</a>
