--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
     <div class="login-box">
-      <section class="demoBox"> Try with Email: to.demo.example@gmail.com<br> Password: ToDemoExample123</section>
       <div class="lb-header">
         <a href="#" class="active" id="login-box-link">Login</a>
         <a href="/register" id="signup-box-link">Sign Up</a>
@@ -10,10 +9,10 @@
       </div>
       <form (submit)="loginEmail()" class="email-login">
         <div class="u-form-group">
-          <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Email"/>
+          <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" value="to.demo.example@gmail.com" placeholder="Email"/>
         </div>
         <div class="u-form-group">
-          <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" placeholder="Password"/>
+          <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" value="ToDemoExample123" placeholder="Password"/>
         </div>
         <div class="u-form-group">
           <button >Log in</button>
