--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
       </div>
       <form (submit)="loginEmail()" class="email-login">
         <div class="u-form-group">
-          <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" value="to.demo.example@gmail.com" placeholder="Email"/>
+          <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Email"/>
         </div>
         <div class="u-form-group">
           <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" value="ToDemoExample123" placeholder="Password"/>
