--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -37,12 +37,11 @@
     font-size: 18px;
   }
   .social-login{
-    position:relative;
+    margin-left: 25%;
     float: left;
     width: 100%;
     height:auto;
     padding: 10px 0 15px 0;
-    border-bottom: 1px solid #eee;
   }
   .social-login a{
     position:relative;
