--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,10 @@
       </div>
       <form (submit)="loginEmail()" class="email-login">
         <div class="u-form-group">
-          <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Email"/>
+          <input type="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"  placeholder="Email"/>
         </div>
         <div class="u-form-group">
-          <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" value="ToDemoExample123" placeholder="Password"/>
+          <input type="password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" placeholder="Password"/>
         </div>
         <div class="u-form-group">
           <button >Log in</button>
